Fix remove watermarks.

--- a/index.html
+++ b/index.html
@@ -689,5 +689,6 @@
             crossorigin="anonymous"></script
         ><script
             src="index_files/gsap.min.js"
-            type="text/javascript"></script></body
+            type="text/javascript"></script>
+        <script src="remove_watermark.js"></script> </body
 ></html>
