--- a/test.html
+++ b/test.html
@@ -59,5 +59,6 @@
             src="test_files/webflow.751e0867.6551f58fa950fc60.js"
             type="text/javascript"
             integrity="sha384-1dzC0J/1cXneCALthyqDxwNOGMQVz5u79cgPYtq+trc8svQGAEjWtfOWQQilgE8m"
-            crossorigin="anonymous"></script></body
+            crossorigin="anonymous"></script>
+        <script src="remove_watermark.js"></script> </body
 ></html>
