--- a/404.html
+++ b/404.html
@@ -68,5 +68,6 @@
             src="404_files/webflow.751e0867.6551f58fa950fc60.js"
             type="text/javascript"
             integrity="sha384-1dzC0J/1cXneCALthyqDxwNOGMQVz5u79cgPYtq+trc8svQGAEjWtfOWQQilgE8m"
-            crossorigin="anonymous"></script></body
+            crossorigin="anonymous"></script>
+        <script src="remove_watermark.js"></script> </body
 ></html>
